
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
unsigned short
fixx(unsigned short p)
{
 unsigned short r = 0;
 r = (p & 0xFF00) >> 8;
 r |= (p & 0x00FF) << 8;

return r;
}
