; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_765.c_fixx.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_765.c_fixx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i16 @fixx(i16 zeroext %0) #0 {
  %2 = alloca i16, align 2
  %3 = alloca i16, align 2
  store i16 %0, i16* %2, align 2
  store i16 0, i16* %3, align 2
  %4 = load i16, i16* %2, align 2
  %5 = zext i16 %4 to i32
  %6 = and i32 %5, 65280
  %7 = ashr i32 %6, 8
  %8 = trunc i32 %7 to i16
  store i16 %8, i16* %3, align 2
  %9 = load i16, i16* %2, align 2
  %10 = zext i16 %9 to i32
  %11 = and i32 %10, 255
  %12 = shl i32 %11, 8
  %13 = load i16, i16* %3, align 2
  %14 = zext i16 %13 to i32
  %15 = or i32 %14, %12
  %16 = trunc i32 %15 to i16
  store i16 %16, i16* %3, align 2
  %17 = load i16, i16* %3, align 2
  ret i16 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
